Fix missing mobile view image and center align why-card

--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -12,18 +12,23 @@
     -o-background-size: cover;
     background-size: cover;
 }
+
 .carousel-item.one {
     background-image: url('../images/redesign/website_view/unnfidata_6_1.jpg');
 }
+
 .carousel-item.two {
     background-image: url('../images/redesign/website_view/unnfidata_6_2.jpg');
 }
+
 .carousel-item.three {
     background-image: url('../images/redesign/website_view/unnfidata_6_3.jpg');
 }
+
 .carousel-item.four {
     background-image: url('../images/redesign/website_view/unnfidata_6_4.jpg');
 }
+
 .carousel-item.five {
     background-image: url('../images/redesign/website_view/unnfidata_6_5.jpg');
 }
@@ -115,12 +120,36 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
 }
-.why-cards .why-card.one { grid-area: 1 / 1 / 2 / 2; text-align: right; }
-.why-cards .why-card.two { grid-area: 2 / 1 / 3 / 2; text-align: right; }
-.why-cards .why-card.three { grid-area: 3 / 1 / 4 / 2; text-align: right; }
-.why-cards .why-card.four { grid-area: 1 / 3 / 2 / 4; text-align: left; }
-.why-cards .why-card.five { grid-area: 2 / 3 / 3 / 4; text-align: left; }
-.why-cards .why-card.six { grid-area: 3 / 3 / 4 / 4; text-align: left; }
+
+.why-cards .why-card.one {
+    grid-area: 1 / 1 / 2 / 2;
+    text-align: right;
+}
+
+.why-cards .why-card.two {
+    grid-area: 2 / 1 / 3 / 2;
+    text-align: right;
+}
+
+.why-cards .why-card.three {
+    grid-area: 3 / 1 / 4 / 2;
+    text-align: right;
+}
+
+.why-cards .why-card.four {
+    grid-area: 1 / 3 / 2 / 4;
+    text-align: left;
+}
+
+.why-cards .why-card.five {
+    grid-area: 2 / 3 / 3 / 4;
+    text-align: left;
+}
+
+.why-cards .why-card.six {
+    grid-area: 3 / 3 / 4 / 4;
+    text-align: left;
+}
 
 .why-card {
     width: 430px;
@@ -137,7 +166,6 @@
     border-radius: 0.5rem;
     line-height: 1.5;
     box-shadow: 0 20px 20px rgb(0 0 0 / 0.2);
-    text-align: center;
 }
 
 .why-card:hover {
@@ -188,7 +216,7 @@
 }
 
 /* TESTIMONIAL SECTION */
-#testimonial > h1 > span {
+#testimonial>h1>span {
     color: var(--green-color);
 }
 
@@ -205,6 +233,7 @@
     border-radius: 30px;
     padding: 1em;
 }
+
 #testimonial .review-cards .review-card .bottom {
     line-height: 2em;
     margin-top: 1em;
@@ -215,6 +244,7 @@
 .--green-background {
     background-color: var(--green-color);
 }
+
 .--green-text {
     color: var(--green-color);
 }
@@ -235,17 +265,21 @@
     .carousel-item.one {
         background-image: url('../images/redesign/mobile_view/unnfidata_5_1.jpg');
     }
+
     .carousel-item.two {
         background-image: url('../images/redesign/mobile_view/unnfidata_5_2.jpg');
     }
+
     .carousel-item.three {
         background-image: url('../images/redesign/mobile_view/unnfidata_5_3.jpg');
     }
+
     .carousel-item.four {
         background-image: url('../images/redesign/mobile_view/unnfidata_5_4.jpg');
     }
+
     .carousel-item.five {
-        background-image: url('../images/redesign/mobile_view/unnfidata_5_5.jpg');
+        background-image: url('../images/redesign/mobile_view/unnfidata_6_5.jpg');
     }
 
     .why-cards {
@@ -253,6 +287,9 @@
         display: flex;
         gap: 1em;
         flex-wrap: wrap;
-        text-align: justify;
+    }
+
+    .why-cards .why-card {
+        text-align: center !important;
     }
 }
